# il2x-cmake

./: .gitignore  CMakeLists.txt  main.c
il2x_output/IL2X_CoreLib/: IL2X_NativeExternAttribute.c  IL2X_NativeExternAttribute.h  IL2X_NativeExternAttribute_Methods.h  IL2X_NativeStringParamAttribute.c  IL2X_NativeStringParamAttribute.h  IL2X_NativeStringParamAttribute_Methods.h  IL2X_NativeStringType.c  IL2X_NativeStringType_Methods.h  IL2X_NativeTarget.c  IL2X_NativeTarget_Methods.h  IL2X_NativeTypeAttribute.c  IL2X_NativeTypeAttribute.h  IL2X_NativeTypeAttribute_Methods.h  Microsoft_CodeAnalysis_EmbeddedAttribute.c  Microsoft_CodeAnalysis_EmbeddedAttribute.h  Microsoft_CodeAnalysis_EmbeddedAttribute_Methods.h  System_Activator.c  System_Activator.h  System_Activator_Methods.h  System_ArgumentException.c  System_ArgumentException.h  System_ArgumentException_Methods.h  System_ArgumentOutOfRangeException.c  System_ArgumentOutOfRangeException.h  System_ArgumentOutOfRangeException_Methods.h  System_Array.c  System_Array.h  System_Array_Methods.h  System_Attribute.c  System_Attribute.h  System_AttributeTargets.c  System_AttributeTargets_Methods.h  System_AttributeUsageAttribute.c  System_AttributeUsageAttribute.h  System_AttributeUsageAttribute_Methods.h  System_Attribute_Methods.h  System_BitConverter.c  System_BitConverter.h  System_BitConverter_Methods.h  System_Boolean.c  (+251 more)
il2x_output/RayTraceBenchmark/: RayTraceBenchmark_MyGeneric_1_NestedClass_System_Int32_.c  RayTraceBenchmark_MyGeneric_1_NestedClass_System_Int32_.h  RayTraceBenchmark_MyGeneric_1_System_Int32_.c  (+8 more)
